crates/nil-ffi/gen/libnil.h

typedef enum Status Status;
typedef int32_t Status;
typedef unsigned int RequestId;
void nil_ffi_free_str(char *ptr);
Status nil_ffi_poll(char **json_out);
void nil_ffi_shutdown(void);
void nil_ffi_version(RequestId request_id);
void nil_client_version(RequestId request_id);
/**
 * [`Client::is_local`](nil_client::Client::is_local)
 */
void nil_is_local(RequestId request_id);
/**
 * [`Client::is_ready`](nil_client::Client::is_ready)
 */
void nil_is_ready(RequestId request_id);
/**
 * [`Client::is_remote`](nil_client::Client::is_remote)
 */
void nil_is_remote(RequestId request_id);
/**
 * [`Client::server_addr`](nil_client::Client::server_addr)
 */
void nil_server_addr(RequestId request_id);
/**
 * [`Client::set_user_agent`](nil_client::Client::set_user_agent)
 */
void nil_set_user_agent(RequestId request_id, const char *json_user_agent);
/**
 * [`Client::stop`](nil_client::Client::stop)
 */
void nil_stop_client(RequestId request_id);
/**
 * [`Client::update`](nil_client::Client::update)
 */
void nil_update_client(RequestId request_id, const char *json_options);
/**
 * [`Client::user_agent`](nil_client::Client::user_agent)
 */
void nil_user_agent(RequestId request_id);
/**
 * [`Client::world`](nil_client::Client::world)
 */
void nil_world(RequestId request_id);
/**
 * [`Client::add_academy_recruit_order`](nil_client::Client::add_academy_recruit_order)
 */
void nil_add_academy_recruit_order(RequestId request_id, const char *json_req);
/**
 * [`Client::add_prefecture_build_order`](nil_client::Client::add_prefecture_build_order)
 */
void nil_add_prefecture_build_order(RequestId request_id, const char *json_req);
/**
 * [`Client::add_stable_recruit_order`](nil_client::Client::add_stable_recruit_order)
 */
void nil_add_stable_recruit_order(RequestId request_id, const char *json_req);
/**
 * [`Client::add_workshop_recruit_order`](nil_client::Client::add_workshop_recruit_order)
 */
void nil_add_workshop_recruit_order(RequestId request_id, const char *json_req);
/**
 * [`Client::authorize`](nil_client::Client::authorize)
 */
void nil_authorize(RequestId request_id, const char *json_req);
/**
 * [`Client::cancel_academy_recruit_order`](nil_client::Client::cancel_academy_recruit_order)
 */
void nil_cancel_academy_recruit_order(RequestId request_id, const char *json_req);
/**
 * [`Client::cancel_maneuver`](nil_client::Client::cancel_maneuver)
 */
void nil_cancel_maneuver(RequestId request_id, const char *json_req);
/**
 * [`Client::cancel_prefecture_build_order`](nil_client::Client::cancel_prefecture_build_order)
 */
void nil_cancel_prefecture_build_order(RequestId request_id, const char *json_req);
/**
 * [`Client::cancel_stable_recruit_order`](nil_client::Client::cancel_stable_recruit_order)
 */
void nil_cancel_stable_recruit_order(RequestId request_id, const char *json_req);
/**
 * [`Client::cancel_workshop_recruit_order`](nil_client::Client::cancel_workshop_recruit_order)
 */
void nil_cancel_workshop_recruit_order(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_fill_world`](nil_client::Client::cheat_fill_world)
 */
void nil_cheat_fill_world(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_academy_recruit_queue`](nil_client::Client::cheat_get_academy_recruit_queue)
 */
void nil_cheat_get_academy_recruit_queue(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_academy_recruit_queues`](nil_client::Client::cheat_get_academy_recruit_queues)
 */
void nil_cheat_get_academy_recruit_queues(RequestId request_id,
                                          const char *json_req);
/**
 * [`Client::cheat_get_all_academy_recruit_queues`](nil_client::Client::cheat_get_all_academy_recruit_queues)
 */
void nil_cheat_get_all_academy_recruit_queues(RequestId request_id,
                                              const char *json_req);
/**
 * [`Client::cheat_get_all_prefecture_build_queues`](nil_client::Client::cheat_get_all_prefecture_build_queues)
 */
void nil_cheat_get_all_prefecture_build_queues(RequestId request_id,
                                               const char *json_req);
/**
 * [`Client::cheat_get_all_stable_recruit_queues`](nil_client::Client::cheat_get_all_stable_recruit_queues)
 */
void nil_cheat_get_all_stable_recruit_queues(RequestId request_id,
                                             const char *json_req);
/**
 * [`Client::cheat_get_build_steps`](nil_client::Client::cheat_get_build_steps)
 */
void nil_cheat_get_build_steps(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_cities`](nil_client::Client::cheat_get_cities)
 */
void nil_cheat_get_cities(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_city`](nil_client::Client::cheat_get_city)
 */
void nil_cheat_get_city(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_ethics`](nil_client::Client::cheat_get_ethics)
 */
void nil_cheat_get_ethics(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_idle_armies_at`](nil_client::Client::cheat_get_idle_armies_at)
 */
void nil_cheat_get_idle_armies_at(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_idle_personnel_at`](nil_client::Client::cheat_get_idle_personnel_at)
 */
void nil_cheat_get_idle_personnel_at(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_infrastructure`](nil_client::Client::cheat_get_infrastructure)
 */
void nil_cheat_get_infrastructure(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_maneuvers`](nil_client::Client::cheat_get_maneuvers)
 */
void nil_cheat_get_maneuvers(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_maneuvers_of`](nil_client::Client::cheat_get_maneuvers_of)
 */
void nil_cheat_get_maneuvers_of(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_player`](nil_client::Client::cheat_get_player)
 */
void nil_cheat_get_player(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_players`](nil_client::Client::cheat_get_players)
 */
void nil_cheat_get_players(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_prefecture_build_queue`](nil_client::Client::cheat_get_prefecture_build_queue)
 */
void nil_cheat_get_prefecture_build_queue(RequestId request_id,
                                          const char *json_req);
/**
 * [`Client::cheat_get_prefecture_build_queues`](nil_client::Client::cheat_get_prefecture_build_queues)
 */
void nil_cheat_get_prefecture_build_queues(RequestId request_id,
                                           const char *json_req);
/**
 * [`Client::cheat_get_resources`](nil_client::Client::cheat_get_resources)
 */
void nil_cheat_get_resources(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_stable_recruit_queue`](nil_client::Client::cheat_get_stable_recruit_queue)
 */
void nil_cheat_get_stable_recruit_queue(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_stable_recruit_queues`](nil_client::Client::cheat_get_stable_recruit_queues)
 */
void nil_cheat_get_stable_recruit_queues(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_get_storage_capacity`](nil_client::Client::cheat_get_storage_capacity)
 */
void nil_cheat_get_storage_capacity(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_bot_ethics`](nil_client::Client::cheat_set_bot_ethics)
 */
void nil_cheat_set_bot_ethics(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_building_level`](nil_client::Client::cheat_set_building_level)
 */
void nil_cheat_set_building_level(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_food`](nil_client::Client::cheat_set_food)
 */
void nil_cheat_set_food(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_iron`](nil_client::Client::cheat_set_iron)
 */
void nil_cheat_set_iron(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_max_food`](nil_client::Client::cheat_set_max_food)
 */
void nil_cheat_set_max_food(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_max_infrastructure`](nil_client::Client::cheat_set_max_infrastructure)
 */
void nil_cheat_set_max_infrastructure(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_max_iron`](nil_client::Client::cheat_set_max_iron)
 */
void nil_cheat_set_max_iron(RequestId request_id, const char *json_req);
/**
 * [`Client::cheat_set_max_resources`](nil_client::Client::cheat_set_max_resources)
 */
void nil_cheat_set_max_resources(RequestId request_id, const char *json_req);