crates/nil-ffi/gen/libnil.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace CsBindgen
{
    public static unsafe partial class libnil
    {
        const string __DllName = "libnil";





        [DllImport(__DllName, EntryPoint = "nil_ffi_free_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void nil_ffi_free_str(byte* ptr);

        [DllImport(__DllName, EntryPoint = "nil_ffi_poll", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern StatusCode nil_ffi_poll(byte** @out);

        [DllImport(__DllName, EntryPoint = "nil_ffi_shutdown", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void nil_ffi_shutdown();

        [DllImport(__DllName, EntryPoint = "nil_ffi_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_ffi_version();

        [DllImport(__DllName, EntryPoint = "nil_client_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_client_version();

        [DllImport(__DllName, EntryPoint = "nil_is_local", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_is_local();

        [DllImport(__DllName, EntryPoint = "nil_is_ready", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_is_ready();

        [DllImport(__DllName, EntryPoint = "nil_is_remote", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_is_remote();

        [DllImport(__DllName, EntryPoint = "nil_server_addr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_server_addr();

        [DllImport(__DllName, EntryPoint = "nil_set_user_agent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_set_user_agent(byte* user_agent);

        [DllImport(__DllName, EntryPoint = "nil_stop_client", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_stop_client();

        [DllImport(__DllName, EntryPoint = "nil_update_client", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_update_client(byte* options);

        [DllImport(__DllName, EntryPoint = "nil_user_agent", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_user_agent();

        [DllImport(__DllName, EntryPoint = "nil_world", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_world();

        [DllImport(__DllName, EntryPoint = "nil_add_academy_recruit_order", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_add_academy_recruit_order(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_add_prefecture_build_order", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_add_prefecture_build_order(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_add_stable_recruit_order", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_add_stable_recruit_order(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_add_workshop_recruit_order", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_add_workshop_recruit_order(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_authorize", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_authorize(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cancel_academy_recruit_order", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cancel_academy_recruit_order(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cancel_maneuver", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cancel_maneuver(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cancel_prefecture_build_order", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cancel_prefecture_build_order(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cancel_stable_recruit_order", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cancel_stable_recruit_order(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cancel_workshop_recruit_order", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cancel_workshop_recruit_order(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_fill_world", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_fill_world(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_academy_recruit_queue", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_academy_recruit_queue(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_academy_recruit_queues", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_academy_recruit_queues(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_all_academy_recruit_queues", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_all_academy_recruit_queues(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_all_prefecture_build_queues", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_all_prefecture_build_queues(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_all_stable_recruit_queues", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_all_stable_recruit_queues(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_build_steps", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_build_steps(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_cities", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_cities(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_city", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_city(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_ethics", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_ethics(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_idle_armies_at", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_idle_armies_at(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_idle_personnel_at", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_idle_personnel_at(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_infrastructure", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_infrastructure(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_maneuvers", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_maneuvers(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_maneuvers_of", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_maneuvers_of(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_player", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_player(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_players", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_players(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_prefecture_build_queue", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_prefecture_build_queue(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_prefecture_build_queues", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_prefecture_build_queues(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_resources", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_resources(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_stable_recruit_queue", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_stable_recruit_queue(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_stable_recruit_queues", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_stable_recruit_queues(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_get_storage_capacity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_get_storage_capacity(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_bot_ethics", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_bot_ethics(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_building_level", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_building_level(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_food", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_food(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_iron", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_iron(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_max_food", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_max_food(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_max_infrastructure", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_max_infrastructure(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_max_iron", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_max_iron(byte* req);

        [DllImport(__DllName, EntryPoint = "nil_cheat_set_max_resources", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint nil_cheat_set_max_resources(byte* req);
